--- a/modules/jwt_auth_issuer/jwt_auth_issuer.routing.yml
+++ b/modules/jwt_auth_issuer/jwt_auth_issuer.routing.yml
@@ -1,9 +1,9 @@
 jwt_auth_issuer.jwt_auth_issuer_controller_generateToken:
   path: 'jwt/token'
   defaults:
-    _controller: '\Drupal\jwt_auth_issuer\Controller\JWTAuthIssuerController::tokenResponse'
+    _controller: '\Drupal\jwt_auth_issuer\Controller\JwtAuthIssuerController::tokenResponse'
     _title: 'JWT Auth Issuer'
   options:
     _auth: [ 'jwt_auth', 'basic_auth', 'cookie' ]
   requirements:
-    _permission: 'access content'
+    _user_is_logged_in: 'TRUE'
