--- a/modules/jwt_auth_issuer/jwt_auth_issuer.services.yml
+++ b/modules/jwt_auth_issuer/jwt_auth_issuer.services.yml
@@ -1,6 +1,6 @@
 services:
   jwt_auth_issuer.subscriber:
-    class: Drupal\jwt_auth_issuer\EventSubscriber\JWTAuthIssuerSubscriber
+    class: Drupal\jwt_auth_issuer\EventSubscriber\JwtAuthIssuerSubscriber
     arguments: [ '@current_user' ]
     tags:
       - { name: event_subscriber }
