--- a/jwt.services.yml
+++ b/jwt.services.yml
@@ -8,7 +8,7 @@ services:
     class: Firebase\JWT\JWT
   jwt.validator:
     class: Drupal\jwt\Validator\JwtValidator
-    arguments: [ '@request_stack', '@jwt.transcoder', '@key.repository' ]
+    arguments: [ '@request_stack', '@jwt.transcoder', '@key.repository', '@config.factory' ]
     tags:
       - { name: persist }
   jwt.transcoder:
