Rewrites the JWT transcoder
Rewrites the JWT transcoder, the JWT class and interface
Enables RSA signing and validation
Much more flexible configuration
Gets rid of the vendor directory
Removes composer.lock

--- a/jwt.links.menu.yml
+++ b/jwt.links.menu.yml
@@ -1,7 +1,6 @@
-jwt.jwt_config_form:
-  title: 'JWT Authentication'
-  route_name: jwt.jwt_config_form
-  description: 'Configures the JWT Authentication module'
+jwt.settings:
+  title: 'JSON Web Tokens'
+  route_name: jwt.settings
+  description: 'Configure JSON Web Token settings'
   parent: system.admin_config_system
-  weight: 99
-
+  weight: 20
