--- a/jwt.services.yml
+++ b/jwt.services.yml
@@ -1,17 +1,6 @@
 services:
-  jwt.authentication.jwt:
-    class: Drupal\jwt\Authentication\Provider\JwtAuth
-    arguments: [ '@entity_type.manager', '@jwt.validator', '@event_dispatcher' ]
-    tags:
-      - { name: authentication_provider, provider_id: 'jwt_auth', global: TRUE, priority: 100 }
-  jwt.firebase.php-jwt:
-    class: Firebase\JWT\JWT
-  jwt.validator:
-    class: Drupal\jwt\Validator\JwtValidator
-    arguments: [ '@request_stack', '@jwt.transcoder', '@key.repository', '@config.factory' ]
-    tags:
-      - { name: persist }
   jwt.transcoder:
-    class: Drupal\jwt\Transcoder\JwtTranscoder
-    arguments: [ '@jwt.firebase.php-jwt' ]
-
+    class: '\Drupal\jwt\JwtTranscoder'
+    arguments: ['@config.factory', '@key.repository']
+    calls:
+      - ['setAlgorithm']
