--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,13 @@
 {
-  "name": "drupal/jwt",
-  "type": "drupal-module",
-  "description": "Provides a JSON Web Token authentication provider",
-  "keywords": ["Drupal"],
-  "license": "GPL-2.0+",
-  "homepage": "https://www.drupal.org/project/jwt",
-  "minimum-stability": "dev",
-  "support": {
-    "issues": "http://drupal.org/project/issues/jwt",
-    "source": "http://cgit.drupalcode.org/jwt"
-  },
-  "require": {
-    "firebase/php-jwt": "3"
-  }
+    "name": "drupal/jwt",
+    "type": "drupal-module",
+    "require": {
+        "firebase/php-jwt": "4"
+    },
+    "authors": [
+        {
+            "name": "Gabriel SULLICE",
+            "email": "gabriel@sullice.com"
+        }
+    ]
 }
