--- a/jwt.info.yml
+++ b/jwt.info.yml
@@ -1,10 +1,11 @@
-name: JWT Authentication
-type: module
-description: Provides functionality for issuing, validating, and authenticating with JSON Web Tokens.
-core: 8.x
+name: JSON Web Token
+description: Provides a basic JWT implentation for Drupal
 package: Web services
 
-configure: jwt.jwt_config_form
+type: module
+core: 8.x
 
 dependencies:
-  - key
+  - key:key
+
+configure: jwt.settings
