Refactor refresh tokens to use jti and support expiration.

--- a/modules/jwt_auth_refresh/jwt_auth_refresh.info.yml
+++ b/modules/jwt_auth_refresh/jwt_auth_refresh.info.yml
@@ -4,4 +4,4 @@ description: Provides an API for token reissuance
 core: 8.x
 package: Web services
 dependencies:
-  - jwt:jwt
+  - jwt:jwt_auth_issuer
