--- a/modules/jwt_auth_refresh/jwt_auth_refresh.services.yml
+++ b/modules/jwt_auth_refresh/jwt_auth_refresh.services.yml
@@ -1,4 +1,4 @@
 services:
   jwt_auth_refresh.tokens:
     class: '\Drupal\jwt_auth_refresh\JwtRefreshTokens'
-    arguments: [ '@entity_type.manager' ]
+    arguments: [ '@entity_type.manager', '@jwt.transcoder' ]
